--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -123,31 +123,32 @@
     
     <header class="border-bottom mb-4 pb-3">
             <div class="form-inline">
-                <span class="mr-md-auto">32 Items found </span>
+                <span class="mr-md-auto"><b>{{ product_count }}</b> Items found </span>
                 
             </div>
     </header><!-- sect-heading -->
     
     <div class="row">
+        {% for product in products %}
         <div class="col-md-4">
             <figure class="card card-product-grid">
                 <div class="img-wrap"> 
                     
-                    <img src="{% static 'images/items/1.jpg' %}">
+                    <img src="{{ product.image.url }}">
                     
                 </div> <!-- img-wrap.// -->
                 <figcaption class="info-wrap">
                     <div class="fix-height">
-                        <a href="./product-detail.html" class="title">Great item name goes here</a>
+                        <a href="./product-detail.html" class="title">{{ product.product_name }}</a>
                         <div class="price-wrap mt-2">
-                            <span class="price">$1280</span>
-                            <del class="price-old">$1980</del>
+                            <span class="price">$ {{ product.price }}</span>
                         </div> <!-- price-wrap.// -->
                     </div>
-                    <a href="#" class="btn btn-block btn-success">Added to cart </a>
+                    <a href="#" class="btn btn-block btn-primary">Add to cart</a>
                 </figcaption>
             </figure>
         </div> <!-- col.// -->
+        {% endfor %}
     </div> <!-- row end.// -->
     
     
