Added 'out of stock' tag

--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -69,7 +69,11 @@
 		</div>
 	</div> <!-- row.// -->
 	<hr>
+    {% if single_product.stock <= 0 %}
+    <h5 class="text-danger">Out of Stock</h5>
+    {% else %}
 	<a href="./product-detail.html" class="btn  btn-primary"> <span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i>  </a>
+    {% endif %}
 </article> <!-- product-info-aside .// -->
 		</main> <!-- col.// -->
 	</div> <!-- row.// -->
