--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -13,20 +13,22 @@
     <table class="table table-borderless table-shopping-cart">
     <thead class="text-muted">
     <tr class="small text-uppercase">
-      <th scope="col">Product</th>
-      <th scope="col" width="120">Quantity</th>
-      <th scope="col" width="120">Price</th>
-      <th scope="col" class="text-right" width="200"> </th>
+        <th scope="col">Product</th>
+        <th scope="col" width="120">Quantity</th>
+        <th scope="col" width="120">Price</th>
+        <th scope="col" class="text-right" width="200"> </th>
     </tr>
     </thead>
     <tbody>
+
+    {% for cart_item in cart_items %}
     <tr>
         <td>
             <figure class="itemside align-items-center">
-                <div class="aside"><img src="{% static './images/items/11.jpg' %}" class="img-sm"></div>
+                <div class="aside"><img src="{{ cart_item.product.image.url }}" class="img-sm"></div>
                 <figcaption class="info">
-                    <a href="#" class="title text-dark">Camera Canon EOS M50 Kit</a>
-                    <p class="text-muted small">Matrix: 25 Mpx <br> Brand: Canon</p>
+                    <a href="#" class="title text-dark">{{ cart_item.product.product_name }}</a>
+                    <p class="text-muted small">Color: 25 Mpx <br> Size: Canon</p>
                 </figcaption>
             </figure>
         </td>
@@ -37,23 +39,24 @@
                                 <div class="input-group-prepend">
                                 <button class="btn btn-light" type="button" id="button-plus"> <i class="fa fa-minus"></i> </button>
                                 </div>
-                                <input type="text" class="form-control"  value="1">
+                                <input type="text" class="form-control"  value="{{ cart_item.quantity }}">
                                 <div class="input-group-append">
-                                <button class="btn btn-light" type="button" id="button-minus"> <i class="fa fa-plus"></i> </button>
+                                <a href="{% url 'add_cart' cart_item.product.id %}" class="btn btn-light" type="button" id="button-minus"> <i class="fa fa-plus"></i> </a>
                                 </div>
                             </div> <!-- input-group.// -->
                         </div> <!-- col.// -->
         </td>
         <td> 
             <div class="price-wrap"> 
-                <var class="price">$1156.00</var> 
-                <small class="text-muted"> $315.20 each </small> 
+                <var class="price">$ {{ cart_item.sub_total }}</var> 
+                <small class="text-muted"> $ {{ cart_item.product.price }} each </small> 
             </div> <!-- price-wrap .// -->
         </td>
         <td class="text-right"> 
         <a href="" class="btn btn-danger"> Remove</a>
         </td>
     </tr>
+    {% endfor %}
     </tbody>
     </table>
     </div> <!-- card.// -->
@@ -65,7 +68,7 @@
             <div class="card-body">
                 <dl class="dlist-align">
                     <dt>Total price:</dt>
-                    <dd class="text-right">$69.97</dd>
+                    <dd class="text-right">$ {{ total }}</dd>
                 </dl>
                 <dl class="dlist-align">
                     <dt>Tax:</dt>
