--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -72,11 +72,11 @@
                 </dl>
                 <dl class="dlist-align">
                     <dt>Tax:</dt>
-                    <dd class="text-right"> $10.00</dd>
+                    <dd class="text-right"> $ {{ tax }}</dd>
                 </dl>
                 <dl class="dlist-align">
-                    <dt>Total:</dt>
-                    <dd class="text-right text-dark b"><strong>$59.97</strong></dd>
+                    <dt>Grand total:</dt>
+                    <dd class="text-right text-dark b"><strong>$ {{ grand_total }}</strong></dd>
                 </dl>
                 <hr>
                 <p class="text-center mb-3">
