--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -141,7 +141,7 @@
                             <span class="price">$ {{ product.price }}</span>
                         </div> <!-- price-wrap.// -->
                     </div>
-                    <a href="{% url 'add_cart' product.id %}" class="btn btn-block btn-primary">Add to cart</a>
+                    <a href="{{ product.get_url }}" class="btn btn-block btn-primary">View details</a>
                 </figcaption>
             </figure>
         </div> <!-- col.// -->
