--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -18,68 +18,52 @@
 </article> <!-- gallery-wrap .end// -->
 		</aside>
 		<main class="col-md-6 border-left">
-<article class="content-body">
+<form action="{% url 'add_cart' single_product.id %}" method="GET">
+	<article class="content-body">
 
-<h2 class="title">{{ single_product.product_name }}</h2>
+	<h2 class="title">{{ single_product.product_name }}</h2>
 
-<div class="mb-3"> 
-	<var class="price h4">$ {{ single_product.price }}</var> 
-</div> 
+	<div class="mb-3"> 
+		<var class="price h4">$ {{ single_product.price }}</var> 
+	</div> 
 
-<p>{{ single_product.description }}</p>
+	<p>{{ single_product.description }}</p>
 
 
-<hr>
-	<div class="row">
-		<div class="item-option-select">
-			<h6>Choose Color</h6>
-			<div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
-                <label class="btn btn-light">
-                    <input type="radio" name="radio_color"> Silver
-                </label>
-                <label class="btn btn-light">
-                    <input type="radio" name="radio_color" > Gray
-                </label>
-                <label class="btn btn-light active">
-                    <input type="radio" name="radio_color checked"> Gold
-                </label>
-                <label class="btn btn-light">
-                    <input type="radio" name="radio_color"> Black
-                </label>
-			</div> 
-		</div>
-	</div> <!-- row.// -->
-	<div class="row">
-		<div class="item-option-select">
-			<h6>Select Size</h6>
-			<div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
-                <label class="btn btn-light">
-                    <input type="radio" name="radio_color"> S
-                </label>
-                <label class="btn btn-light active">
-                    <input type="radio" name="radio_color" checked> M
-                </label>
-                <label class="btn btn-light">
-                    <input type="radio" name="radio_color"> L
-                </label>
-                <label class="btn btn-light">
-                    <input type="radio" name="radio_color"> XL
-                </label>
-			</div> 
-		</div>
-	</div> <!-- row.// -->
 	<hr>
-    {% if single_product.stock <= 0 %}
-        <h5 class="text-danger">Out of Stock</h5>
-    {% else %}
-	    {% if in_cart %}
-		    <a href="{% url 'add_cart' single_product.id %}" class="btn  btn-success"> <span class="text">Added to cart</span> <i class="fas fa-check"></i>  </a>
-		    <a href="{% url 'cart' %}" class="btn  btn-outline-primary"> <span class="text">View cart</span> <i class="fas fa-eye"></i>  </a>
-	    {% else%}
-	        <a href="{% url 'add_cart' single_product.id %}" class="btn  btn-primary"> <span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i>  </a>
-        {% endif %}
-	{% endif %}
-</article> <!-- product-info-aside .// -->
+		<div class="row">
+			<div class="item-option-select">
+				<h6>Choose Color</h6>
+				<select name="color" class="form-control">
+					<option value="red">Red</option>
+					<option value="yellow">Yellow</option>
+					<option value="green">Green</option>
+				</select>
+			</div>
+		</div> <!-- row.// -->
+		<div class="row">
+			<div class="item-option-select">
+				<h6>Select Size</h6>
+				<select name="size" class="form-control">
+					<option value="small">S</option>
+					<option value="medium">M</option>
+					<option value="large">L</option>
+				</select>
+			</div>
+		</div> <!-- row.// -->
+		<hr>
+		{% if single_product.stock <= 0 %}
+			<h5 class="text-danger">Out of Stock</h5>
+		{% else %}
+			{% if in_cart %}
+				<a href="{% url 'add_cart' single_product.id %}" class="btn  btn-success"> <span class="text">Added to cart</span> <i class="fas fa-check"></i>  </a>
+				<a href="{% url 'cart' %}" class="btn  btn-outline-primary"> <span class="text">View cart</span> <i class="fas fa-eye"></i>  </a>
+			{% else%}
+				<button type="submit" class="btn  btn-primary"> <span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i>  </button>
+			{% endif %}
+		{% endif %}
+	</article>
+</form> <!-- product-info-aside .// -->
 		</main> <!-- col.// -->
 	</div> <!-- row.// -->
 </div> <!-- card.// -->
@@ -94,7 +78,6 @@
 		<h3>Customer Reviews </h3>  
 		
 	</header>
-
 	<article class="box mb-3">
 		<div class="icontext w-100">
 			<img src="{% static './images/avatars/avatar1.jpg' %}" class="img-xs icon rounded-circle">
@@ -112,7 +95,6 @@
 			</p>	
 		</div>
 	</article>
-
 	
 
 	</div> <!-- col.// -->
