Variation manager for variation model

--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -18,7 +18,8 @@
 </article> <!-- gallery-wrap .end// -->
 		</aside>
 		<main class="col-md-6 border-left">
-<form action="{% url 'add_cart' single_product.id %}" method="GET">
+<form action="{% url 'add_cart' single_product.id %}" method="POST">
+	{% csrf_token %}
 	<article class="content-body">
 
 	<h2 class="title">{{ single_product.product_name }}</h2>
@@ -33,21 +34,23 @@
 	<hr>
 		<div class="row">
 			<div class="item-option-select">
-				<h6>Choose Color</h6>
-				<select name="color" class="form-control">
-					<option value="red">Red</option>
-					<option value="yellow">Yellow</option>
-					<option value="green">Green</option>
+				<h6>Color</h6>
+				<select name="color" class="form-control" required>
+					<option value="" disabled selected>Select Color</option>
+					{% for i in single_product.variation_set.colors %}
+					<option value="{{ i.variation_value | lower }}">{{ i.variation_value | capfirst }}</option>
+					{% endfor %}
 				</select>
 			</div>
 		</div> <!-- row.// -->
 		<div class="row">
 			<div class="item-option-select">
-				<h6>Select Size</h6>
-				<select name="size" class="form-control">
-					<option value="small">S</option>
-					<option value="medium">M</option>
-					<option value="large">L</option>
+				<h6>Size</h6>
+				<select name="size" class="form-control" required>
+					<option value="" disabled selected>Select Size</option>
+					{% for i in single_product.variation_set.sizes %}
+					<option value="{{ i.variation_value | lower }}">{{ i.variation_value | capfirst }}</option>
+					{% endfor %}
 				</select>
 			</div>
 		</div> <!-- row.// -->
