--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -46,17 +46,23 @@
         </td>
         <td> 
             <!-- col.// -->
-                        <div class="col"> 
-                            <div class="input-group input-spinner">
-                                <div class="input-group-prepend">
-                                <a href="{% url 'remove_cart' cart_item.product.id %}" class="btn btn-light" type="button" id="button-plus"> <i class="fa fa-minus"></i> </a>
-                                </div>
-                                <input type="text" class="form-control"  value="{{ cart_item.quantity }}">
-                                <div class="input-group-append">
-                                <a href="{% url 'add_cart' cart_item.product.id %}" class="btn btn-light" type="button" id="button-minus"> <i class="fa fa-plus"></i> </a>
-                                </div>
-                            </div> <!-- input-group.// -->
-                        </div> <!-- col.// -->
+            <div class="col"> 
+                <div class="input-group input-spinner">
+                    <div class="input-group-prepend">
+                    <a href="{% url 'remove_cart' cart_item.product.id cart_item.id %}" class="btn btn-light" type="button" id="button-plus"> <i class="fa fa-minus"></i> </a>
+                    </div>
+                    <input type="text" class="form-control"  value="{{ cart_item.quantity }}">
+                    <div class="input-group-append">
+                        <form action="{% url 'add_cart' cart_item.product.id %}" method="POST">
+                            {% csrf_token %}
+                            {% for item in cart_item.variations.all %}
+                                <input type="hidden" name="{{ item.variation_category | lower }}" value="{{ item.variation_value | capfirst }}">
+                            {% endfor %}
+                            <button class="btn btn-light" type="submit" id="button-minus"> <i class="fa fa-plus"></i> </button>
+                        </form>
+                    </div>
+                </div> <!-- input-group.// -->
+            </div> <!-- col.// -->
         </td>
         <td> 
             <div class="price-wrap"> 
@@ -65,7 +71,7 @@
             </div> <!-- price-wrap .// -->
         </td>
         <td class="text-right"> 
-        <a href="{% url 'remove_cart_item' cart_item.product.id %}" class="btn btn-danger"> Remove</a>
+        <a href="{% url 'remove_cart_item' cart_item.product.id cart_item.id %}" onclick="return confirm('Are you sure you want to remove this item from your cart?')" class="btn btn-danger"> Remove</a>
         </td>
     </tr>
     {% endfor %}
