--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -8,12 +8,14 @@
         <div class="card mx-auto" style="max-width: 380px; margin-top:100px;">
             <div class="card-body">
             <h4 class="card-title mb-4">Sign in</h4>
-            <form>
+            {% include "includes/alerts.html" %}
+            <form action="{% url 'login' %}" method="POST">
+                {% csrf_token %}
                 <div class="form-group">
-                    <input type="email" class="form-control" placeholder="Email Address" >
+                    <input type="email" class="form-control" placeholder="Email Address" name="email">
                 </div> <!-- form-group// -->
                 <div class="form-group">
-                    <input type="password" class="form-control" placeholder="Password" >
+                    <input type="password" class="form-control" placeholder="Password" name="password">
                 </div> <!-- form-group// -->
             
                 <div class="form-group">
@@ -27,7 +29,7 @@
             </div> <!-- card-body.// -->
         </div> <!-- card .// -->
     
-        <p class="text-center mt-4">Don't have account? <a href="#">Sign up</a></p>
+        <p class="text-center mt-4">Don't have account? <a href="{% url 'register' %}">Sign up</a></p>
         <br><br>
     <!-- ============================ COMPONENT LOGIN  END.// ================================= -->
     
