--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -4,6 +4,16 @@
 <!-- ========================= SECTION CONTENT ========================= -->
 <section class="section-conten padding-y" style="min-height:84vh">
 
+{% if request.GET.command == "verification" %}
+
+<div class="container mx-auto alert alert-info text-center" role="alert" style="max-width: 1024px; margin-top:100px;">
+    Check your inbox at [{{ request.GET.email }}]; you should have received a link to validate your account.
+<br><br>
+    Already verified? <a href="{% url 'login' %}">Log in</a>
+</div>
+
+{% else %}
+
     <!-- ============================ COMPONENT LOGIN   ================================= -->
         <div class="card mx-auto" style="max-width: 380px; margin-top:100px;">
             <div class="card-body">
@@ -32,7 +42,7 @@
         <p class="text-center mt-4">Don't have account? <a href="{% url 'register' %}">Sign up</a></p>
         <br><br>
     <!-- ============================ COMPONENT LOGIN  END.// ================================= -->
-    
+    {% endif %}
     
     </section>
     <!-- ========================= SECTION CONTENT END// ========================= -->
