--- a/templates/accounts/resetPassword.html
+++ b/templates/accounts/resetPassword.html
@@ -2,38 +2,23 @@
 
 {% block content %}
 <!-- ========================= SECTION CONTENT ========================= -->
-<section class="section-conten padding-y" style="min-height:84vh">
-
-{% if request.GET.command == "verification" %}
-
-<div class="container mx-auto alert alert-info text-center" role="alert" style="max-width: 1024px; margin-top:100px;">
-    Check your inbox at [{{ request.GET.email }}]; you should have received a link to validate your account.
-<br><br>
-    Already verified? <a href="{% url 'login' %}">Log in</a>
-</div>
-
-{% else %}
 
     <!-- ============================ COMPONENT LOGIN   ================================= -->
         <div class="card mx-auto" style="max-width: 380px; margin-top:100px;">
             <div class="card-body">
             <h4 class="card-title mb-4">Sign in</h4>
             {% include "includes/alerts.html" %}
-            <form action="{% url 'login' %}" method="POST">
+            <form action="{% url 'resetPassword' %}" method="POST">
                 {% csrf_token %}
                 <div class="form-group">
-                    <input type="email" class="form-control" placeholder="Email Address" name="email">
+                    <input type="password" class="form-control" placeholder="New Password" name="password">
                 </div> <!-- form-group// -->
                 <div class="form-group">
-                    <input type="password" class="form-control" placeholder="Password" name="password">
+                    <input type="password" class="form-control" placeholder="Confirm Password" name="confirm-password">
                 </div> <!-- form-group// -->
             
                 <div class="form-group">
-                    <a href="{% url 'forgotPassword' %}" class="float-right">Forgot password?</a> 
-            
-                </div> <!-- form-group form-check .// -->
-                <div class="form-group">
-                    <button type="submit" class="btn btn-primary btn-block"> Login  </button>
+                    <button type="submit" class="btn btn-primary btn-block"> Reset  </button>
                 </div> <!-- form-group// -->    
             </form>
             </div> <!-- card-body.// -->
@@ -42,8 +27,7 @@
         <p class="text-center mt-4">Don't have account? <a href="{% url 'register' %}">Sign up</a></p>
         <br><br>
     <!-- ============================ COMPONENT LOGIN  END.// ================================= -->
-    {% endif %}
-    
+        
     </section>
     <!-- ========================= SECTION CONTENT END// ========================= -->
 {% endblock %}
