WIP Assign user to cart

--- a/templates/store/checkout.html
+++ b/templates/store/checkout.html
@@ -11,7 +11,8 @@
     <div class="card">
         <div class="card-body">
             <h4 class="card-title-mb-4">Billing Address</h4>
-            <form action="">
+            <form action="" method="POST">
+                {% csrf_token %}
                 <div class="form-row">
                     <div class="col form-group">
                         <label form="">First Name</label>
@@ -60,7 +61,6 @@
                         <label form="">Order Note</label>
                         <textarea name="order_note" rows="2" class="form-control"></textarea>
                     </div>
-            </form>
         </div>
     </div> <!-- card.// -->
     
@@ -109,8 +109,9 @@
                     {% endfor %}
                     </tbody>
                     </table>
-                <a href="./place-order.html" class="btn btn-primary btn-block"> Place Order </a>
-                <a href="{% url 'store' %}" class="btn btn-light btn-block">Continue Shopping</a>
+                <button type="submit" name="submit" class="btn btn-primary btn-block">Place Order</a>
+                <a href="{% url 'store' %}" class="btn btn-light btn-block" >Continue Shopping</a>
+                </form>
             </div> <!-- card-body.// -->
             </div> <!-- card.// -->
     
