Assign user to cart

--- a/templates/store/checkout.html
+++ b/templates/store/checkout.html
@@ -109,7 +109,7 @@
                     {% endfor %}
                     </tbody>
                     </table>
-                <button type="submit" name="submit" class="btn btn-primary btn-block">Place Order</a>
+                <button type="submit" name="submit" class="btn btn-primary btn-block">Place Order</button>
                 <a href="{% url 'store' %}" class="btn btn-light btn-block" >Continue Shopping</a>
                 </form>
             </div> <!-- card-body.// -->
