PayPal payment gateway w/ sandbox account

--- a/templates/orders/payments.html
+++ b/templates/orders/payments.html
@@ -98,7 +98,14 @@
                 <p class="text-center mb-3">
                     <img src="{% static './images/misc/payments.png' %}" height="26">
                 </p>
-                <a href="{% url 'checkout' %}" class="btn btn-primary btn-block"> Pay Now </a>
+                
+
+                
+                <div id="paypal-button-container">
+                    <!--Paypal button-->
+
+                </div>
+
             </div> <!-- card-body.// -->
             </div> <!-- card.// -->
     
@@ -110,4 +117,44 @@
     </div> <!-- container .//  -->
     </section>
     <!-- ========================= SECTION CONTENT END// ========================= -->
+
+<script>
+
+    var amount = {{ grand_total }}
+    // Render the PayPal button into #paypal-button-container
+    paypal.Buttons({
+
+    style: {
+        color:  'blue',
+        shape:  'pill',
+        label:  'pay',
+        height: 40
+    },
+
+        // Set up the transaction
+        createOrder: function(data, actions) {
+            return actions.order.create({
+                purchase_units: [{
+                    amount: {
+                        value: amount,
+                    }
+                }]
+            });
+        },
+
+        // Finalize the transaction
+        onApprove: function(data, actions) {
+            return actions.order.capture().then(function(details) {
+                // Successful capture! For demo purposes:
+                console.log(details);
+                var transaction = orderData.purchase_units[0].payments.captures[0];
+                alert('Transaction '+ transaction.status + ': ' + transaction.id + '\n\nSee console for all available details');
+
+            });
+        }
+
+
+    }).render('#paypal-button-container');
+</script>
+
 {% endblock %}
