--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,9 @@
 <!-- custom javascript -->
 <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
 
+<!-- Include the PayPal JavaScript SDK -->
+<script src="https://www.paypal.com/sdk/js?client-id=AV1aahYgbgLysQ_QR1Zr-GgKjHHNLVFph_T_NpWwRTA5Ct1361exkt9hmTKsy68374ubLBXc5u8sX4DO&currency=USD"></script>
+
 <script type="text/javascript">
 /// some script
 
