--- a/templates/orders/payments.html
+++ b/templates/orders/payments.html
@@ -141,6 +141,7 @@
     var csrftoken = getCookie('csrftoken');
     var orderID = "{{ order.order_number }}"
     var payment_method = "PayPal"
+    var redirect_url = "{% url 'order_complete' %}"
     // Render the PayPal button into #paypal-button-container
     paypal.Buttons({
 
@@ -182,8 +183,10 @@
                         status: details.status,
                     }),
                 })
-                // .then(response => response.json())
-                // .then(data => console.log(data));
+                .then((response) => response.json())
+                .then((data) => {
+                    window.location.href = redirect_url + '?order_number='+data.order_number+'%payment_id='+data.transID;
+                });
             }
         });
     }
