Generate invoice upon order completion

--- a/templates/orders/payments.html
+++ b/templates/orders/payments.html
@@ -185,7 +185,7 @@
                 })
                 .then((response) => response.json())
                 .then((data) => {
-                    window.location.href = redirect_url + '?order_number='+data.order_number+'%payment_id='+data.transID;
+                    window.location.href = redirect_url + '?order_number='+data.order_number+'&payment_id='+data.transID;
                 });
             }
         });
