--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -73,9 +73,38 @@
 			<div class="col-md-9">
 
 	<header class="section-heading">
-		<h3>Customer Reviews </h3>  
-		
+		<h3>Customer Reviews</h3>  
 	</header>
+	<form action="" method="POST">
+		{% csrf_token %}
+		<h5>Leave a Review</h5>
+		<div>
+			<!--Rating stars-->
+			<label>How do you rate this product?</label>
+			<br>
+			<div class="rate">
+				<input type="radio" name="rating" id="rating10" value="5" required><label for="rating10" title="5"></label>
+				<input type="radio" name="rating" id="rating9" value="4.5" required><label for="rating9" title="4.5" class="half"></label>
+				<input type="radio" name="rating" id="rating8" value="4" required><label for="rating8" title="4"></label>
+				<input type="radio" name="rating" id="rating7" value="3.5" required><label for="rating7" title="3.5" class="half"></label>
+				<input type="radio" name="rating" id="rating6" value="3" required><label for="rating6" title="3"></label>
+				<input type="radio" name="rating" id="rating5" value="2.5" required><label for="rating5" title="2.5" class="half"></label>
+				<input type="radio" name="rating" id="rating4" value="2" required><label for="rating4" title="2"></label>
+				<input type="radio" name="rating" id="rating3" value="1.5" required><label for="rating3" title="1.5" class="half"></label>
+				<input type="radio" name="rating" id="rating2" value="1" required><label for="rating2" title="1"></label>
+				<input type="radio" name="rating" id="rating1" value="0.5" required><label for="rating1" title="0.5" class="half"></label>
+			</div>
+
+			Review Title:
+			<input type="text" class="form-control" name="subject">
+			<br>
+			Review:
+			<textarea name="review" rows="4" class="form-control"></textarea>
+			<br>
+			<input type="submit" value="Submit Review" class="btn btn-primary">
+		</div>
+	</form>
+	<br>
 	<article class="box mb-3">
 		<div class="icontext w-100">
 			<img src="{% static './images/avatars/avatar1.jpg' %}" class="img-xs icon rounded-circle">
