Store rating and reviews in db

--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -75,7 +75,7 @@
 	<header class="section-heading">
 		<h3>Customer Reviews</h3>  
 	</header>
-	<form action="" method="POST">
+	<form action="{% url 'submit_review' single_product.id %}" method="POST">
 		{% csrf_token %}
 		<h5>Leave a Review</h5>
 		<div>
@@ -101,8 +101,13 @@
 			Review:
 			<textarea name="review" rows="4" class="form-control"></textarea>
 			<br>
+			{% if user.is_authenticated %}
 			<input type="submit" value="Submit Review" class="btn btn-primary">
+			{% else %}
+			<p>You must be logged in to post a review. <span><a href="{% url 'login' %}">Login now</a></span></p>
+			{% endif %}
 		</div>
+	{% include 'includes/alerts.html' %}
 	</form>
 	<br>
 	<article class="box mb-3">
