Check if user has purchased product before submitting a review

--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -102,7 +102,11 @@
 			<textarea name="review" rows="4" class="form-control"></textarea>
 			<br>
 			{% if user.is_authenticated %}
-			<input type="submit" value="Submit Review" class="btn btn-primary">
+				{% if orderproduct %}
+					<input type="submit" value="Submit Review" class="btn btn-primary">
+				{% else %}
+				<p>You must have purchased this product to post a review.</p>
+				{% endif%}
 			{% else %}
 			<p>You must be logged in to post a review. <span><a href="{% url 'login' %}">Login now</a></span></p>
 			{% endif %}
