Displaying customer reviews and ratings

--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -114,24 +114,34 @@
 	{% include 'includes/alerts.html' %}
 	</form>
 	<br>
+
+	<header class="section-heading">
+		<h3>Customer Reviews</h3>
+	</header>
+
+{% for review in reviews %}
 	<article class="box mb-3">
 		<div class="icontext w-100">
-			<img src="{% static './images/avatars/avatar1.jpg' %}" class="img-xs icon rounded-circle">
 			<div class="text">
-				<span class="date text-muted float-md-right">24.04.2020 </span>  
-				<h6 class="mb-1">Mike John </h6>
-				
+				<span class="date text-muted float-md-right">{{ review.updated_on }}</span>  
+				<h6 class="mb-1">{{ review.user.full_name }}</h6>
+				<div class="rating-star">
+					<span>
+						<i class="fa fa-star{% if review.rating == 0.5 %}-half-o{% elif review.rating < 1 %}-o {% endif %}" aria-hidden="true"></i>
+						<i class="fa fa-star{% if review.rating == 1.5 %}-half-o{% elif review.rating < 2 %}-o {% endif %}" aria-hidden="true"></i>
+						<i class="fa fa-star{% if review.rating == 2.5 %}-half-o{% elif review.rating < 3 %}-o {% endif %}" aria-hidden="true"></i>
+						<i class="fa fa-star{% if review.rating == 3.5 %}-half-o{% elif review.rating < 4 %}-o {% endif %}" aria-hidden="true"></i>
+						<i class="fa fa-star{% if review.rating == 1.5 %}-half-o{% elif review.rating < 5 %}-o {% endif %}" aria-hidden="true"></i>
+					</span>
+				</div>
 			</div>
 		</div> <!-- icontext.// -->
 		<div class="mt-3">
-			<p>
-				Dummy comment Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip
-			</p>	
+			<h6>{{ review.subject }}</h6>
+			<p>{{ review.review }}</p>	
 		</div>
 	</article>
-	
+{% endfor %}
 
 	</div> <!-- col.// -->
 </div> <!-- row.// -->
