--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -23,6 +23,16 @@
 	<article class="content-body">
 
 	<h2 class="title">{{ single_product.product_name }}</h2>
+	<div class="rating-star">
+		<span>
+			<i class="fa fa-star{% if single_product.averageReview < 0.5 %}-o{% elif single_product.averageReview >= 0.5 and single_product.averageReview < 1 %}-half-o {% endif %}" aria-hidden="true"></i>
+			<i class="fa fa-star{% if single_product.averageReview < 1.5 %}-o{% elif single_product.averageReview >= 1.5 and single_product.averageReview < 2 %}-half-o {% endif %}" aria-hidden="true"></i>
+			<i class="fa fa-star{% if single_product.averageReview < 2.5 %}-o{% elif single_product.averageReview >= 2.5 and single_product.averageReview < 3 %}-half-o {% endif %}" aria-hidden="true"></i>
+			<i class="fa fa-star{% if single_product.averageReview < 3.5 %}-o{% elif single_product.averageReview >= 3.5 and single_product.averageReview < 4 %}-half-o {% endif %}" aria-hidden="true"></i>
+			<i class="fa fa-star{% if single_product.averageReview < 4.5 %}-o{% elif single_product.averageReview >= 4.5 and single_product.averageReview < 5 %}-half-o {% endif %}" aria-hidden="true"></i>
+			<span>{{ single_product.countReview }} reviews</span>
+		</span>
+	</div>
 
 	<div class="mb-3"> 
 		<var class="price h4">$ {{ single_product.price }}</var> 
@@ -71,10 +81,6 @@
 
 <div class="row">
 			<div class="col-md-9">
-
-	<header class="section-heading">
-		<h3>Customer Reviews</h3>  
-	</header>
 	<form action="{% url 'submit_review' single_product.id %}" method="POST">
 		{% csrf_token %}
 		<h5>Leave a Review</h5>
@@ -114,6 +120,21 @@
 	{% include 'includes/alerts.html' %}
 	</form>
 	<br>
+
+	<header class="section-heading">
+		<h3>Customer Reviews</h3>
+		<span>Average Rating: </span>
+		<div class="rating-star">
+			<span>
+				<i class="fa fa-star{% if single_product.averageReview < 0.5 %}-o{% elif single_product.averageReview >= 0.5 and single_product.averageReview < 1 %}-half-o {% endif %}" aria-hidden="true"></i>
+				<i class="fa fa-star{% if single_product.averageReview < 1.5 %}-o{% elif single_product.averageReview >= 1.5 and single_product.averageReview < 2 %}-half-o {% endif %}" aria-hidden="true"></i>
+				<i class="fa fa-star{% if single_product.averageReview < 2.5 %}-o{% elif single_product.averageReview >= 2.5 and single_product.averageReview < 3 %}-half-o {% endif %}" aria-hidden="true"></i>
+				<i class="fa fa-star{% if single_product.averageReview < 3.5 %}-o{% elif single_product.averageReview >= 3.5 and single_product.averageReview < 4 %}-half-o {% endif %}" aria-hidden="true"></i>
+				<i class="fa fa-star{% if single_product.averageReview < 4.5 %}-o{% elif single_product.averageReview >= 4.5 and single_product.averageReview < 5 %}-half-o {% endif %}" aria-hidden="true"></i>
+				<span>{{ single_product.countReview }} reviews</span>
+			</span>
+		</div>
+	</header>
 
 {% for review in reviews %}
 	<article class="box mb-3">
