--- a/templates/accounts/edit_profile.html
+++ b/templates/accounts/edit_profile.html
@@ -18,7 +18,7 @@
             <div class="card-body">
                 <div class="text-right">
                     <img src="{{ userprofile.profile_picture.url }}" alt="Profile Picture" width="100" style="border-radius:50px;">
-                </div
+                </div>
                 <div class="row">
                     <div class="col-md-12">
                         <form action="{% url 'edit_profile' %}" method="POST" enctype="multipart/form-data">
