--- a/templates/store/checkout.html
+++ b/templates/store/checkout.html
@@ -50,7 +50,7 @@
                 </div>
                 <div class="col form-group">
                     <label for="">State</label>
-                    <input type="text" name="state" class="form-control">
+                    <input type="text" name="state" class="form-control" required>
                 </div>
                 <div class="col form-group">
                     <label for="">Country</label>
