--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -30,7 +30,7 @@
                     <div class="col-md-6">
                         <div class="card" style="text-align:center;">
                             <div class="card-body">
-                                <img src="https://www.w3schools.com/howto/img_avatar2.png" alt="User Profile Picture" width="50" height="50" style="border-radius:50%;">
+                                <img src="{{ userprofile.profile_picture.url }}" alt="Profile Picture" width="50" style="border-radius:50px;">
                                 <p class="mb-0">{{ user.email }}</p>
                                 <p>{{ user.phone_number }}</p>
                             </div>
