--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -11,11 +11,19 @@
 	<div class="row no-gutters">
 		<aside class="col-md-6">
 <article class="gallery-wrap"> 
-	<div class="img-big-wrap">
-	<a href="#"><img src="{{ single_product.image.url }}"></a>
+	<div class="img-big-wrap mainImage">
+	<center><img src="{{ single_product.image.url }}"></center>
 	</div> <!-- img-big-wrap.// -->
 	
 </article> <!-- gallery-wrap .end// -->
+<ul class="thumb">
+    <li>
+		<a href="{{ single_product.image.url }}" target="mainImage"><img src="{{ single_product.image.url }}" alt="Product Image"></a>
+		{% for image in product_gallery %}
+		<a href="{{ image.image.url }}" target="mainImage"><img src="{{ image.image.url }}" alt="Product Image"></a>
+		{% endfor %}
+	</li
+</ul>
 		</aside>
 		<main class="col-md-6 border-left">
 <form action="{% url 'add_cart' single_product.id %}" method="POST">
