--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -6,9 +6,9 @@
 				<p class="text-muted"> &copy 2019 Company name </p>
 			</div>
 			<div class="col-md-8 text-md-center">
-				<span  class="px-2">info@pixsellz.io</span>
-				<span  class="px-2">+879-332-9375</span>
-				<span  class="px-2">Street name 123, Avanue abc</span>
+				<span  class="px-2">cridelve.dev@gmail.com</span>
+				<span  class="px-2">+49 123 456 7890</span>
+				<span  class="px-2">Dev Street 1, 1324</span>
 			</div>
 			<div class="col-md-2 text-md-right text-muted">
 				<i class="fab fa-lg fa-cc-visa"></i>
